Finish rework, new checkpoint.
TODO: debug the data structures and optimize the input/output format. Start implement map inference algorithms.